--- a/dialplan/asterisk/extensions_lib_did.conf
+++ b/dialplan/asterisk/extensions_lib_did.conf
@@ -20,6 +20,8 @@ exten = s,1,Set(XIVO_DSTNUM=${XIVO_BASE_EXTEN})
 same  =   n,Set(XIVO_CONTEXT=${XIVO_BASE_CONTEXT})
 same  =   n,Set(XIVO_PRESUBR_GLOBAL_NAME=DID)
 same  =   n,Set(XIVO_INCALL_ID=${ARG1})
+same  =   n,AGI(agi://${XIVO_AGID_IP}/prepare_reverse_lookup)
+same  =   n,NoOp(Profile: ${XIVO_REVERSE_PROFILE} id: ${XIVO_REVERSE_ID})
 same  =   n,Set(__XIVO_CALLORIGIN=extern)
 same  =   n,AGI(agi://${XIVO_AGID_IP}/callerid_extend)
 same  =   n,AGI(agi://${XIVO_AGID_IP}/in_callerid)
