Update dhcpd.cond - VOIP.domain-name-servers
Add VOIP.domain-name-servers option for (xivo-pbx/xivo-plugins) dhcpd_update/snom.conf into (xivo-pbx/xivo-config) dhcp/dhcpd.conf.

--- a/templates/dhcp/etc/dhcp/dhcpd.conf
+++ b/templates/dhcp/etc/dhcp/dhcpd.conf
@@ -12,6 +12,7 @@ option VOIP.http-server-port code 3 = string;
 option VOIP.tftp-server-uri code 4 = string;
 option VOIP.http-server-uri code 5 = string;
 option VOIP.tftp-server-ip code 6 = ip-address;
+option VOIP.domain-name-servers code 7 = string;
 
 # Set VOIP variables
 option VOIP.tftp-server-name "#XIVO_PROVD_NET4_IP#";
@@ -21,6 +22,7 @@ option VOIP.tftp-server-uri = concat("tftp://", config-option VOIP.tftp-server-n
 option VOIP.http-server-uri = concat("http://", config-option VOIP.http-server-name,
 				     ":", config-option VOIP.http-server-port);
 option VOIP.tftp-server-ip #XIVO_PROVD_NET4_IP#;
+option VOIP.domain-name-servers = "#XIVO_PROVD_NET4_IP#";
 
 # Include configuration from dhcpd-update
 include "/etc/dhcp/dhcpd_update.conf";
